--- a/admin/package.json
+++ b/admin/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.68.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.10.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
